--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <i class="fa fa-file fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>My Resume</strong>
