--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             function check(form) { /*function to check userid & password*/
                 /*the following code checkes whether the entered userid and password are matching*/
                 if(form.pswrd.value != "mypswrd") {
-                    window.open('www.dthor.me/' + hashCode(form.pswrd.value) + '.html')/*opens the target page while Id & password matches*/
+                    window.open('www.dthor.me/' + hashCode(form.pswrd.value) + ".html")/*opens the target page while Id & password matches*/
                 }
                 else {
                     alert("Error Password or Username")/*displays error message*/
