--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Login page</title>
     </head>
     <body>
-        <h1>Simple Login Page</h1>
+        <h1>dthor.me Login</h1>
         <form name="login">
             
             Password<input type="password" name="pswrd"/>
