changed the page title

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             position: relative;
             bottom: 0;
             height: 60px;
-            background: gray;
+            background: aquamarine;
+            box-shadow:
+		0px 1px 1px rgba(000,000,000,0.5),
+		inset 1px 2px 0px rgba(255,255,255,0.4);
         }
 
         .my-main {
@@ -46,6 +49,7 @@
             height: 1000px;
             width: 100%;
             position: relative;
+            
         }
 
         .my-footer {
@@ -63,7 +67,7 @@
             position: relative;
         }
     </style>
-    <title>David Thor Asbjornsson</title>
+    <title>>|></title>
 </head>
 
 <body>
