--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         .my-logo {
             display: table;
             margin: auto;
+            padding: 25vh;
         }
 
         .navbar {
@@ -42,6 +43,7 @@
             box-shadow:
 		0px 1px 1px rgba(000,000,000,0.5),
 		inset 1px 2px 0px rgba(255,255,255,0.4);
+            padding: 8px;
         }
 
         .my-main {
@@ -66,6 +68,13 @@
             left: 50%;
             position: relative;
         }
+
+        .my-button {
+            width: 32vw;
+            height: 60px;
+            background: none;
+            border: none;
+        }
     </style>
     <title>>|></title>
 </head>
@@ -73,14 +82,16 @@
 <body>
     <div class="my-header">
         <div class="my-logo">
-            My Logo
+            david thor asbjornsson
         </div>
     </div>
     <div class="navbar">
-
+        <button class="my-button">Home</button>
+        <button class="my-button">Projects</button>
+        <button class="my-button">Resume</button>
     </div>
     <div class="my-main">
-        This is the main
+        
     </div>
     <div class="my-footer">
         <!-- This is the footer -->
