--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             display: table;
             margin: auto;
             padding: 25vh;
+            font-size: 50px;
         }
 
         .navbar {
@@ -82,7 +83,7 @@
 <body>
     <div class="my-header">
         <div class="my-logo">
-            david thor asbjornsson
+            >|>
         </div>
     </div>
     <div class="navbar">
