--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <style>
+        * {
+            box-sizing: border-box;
+        }
         html {
             height: 100%;
             overflow-x: hidden;
@@ -90,15 +93,15 @@
         .my-menu-icon {
             background: aquamarine;
             position: fixed;
-            top: 0;
+            top: 50vh;
             left: 0;
             z-index: 100;
             height: 25px;
-            width: 6vw;
+            width: 4vw;
             color: black;
         }
     </style>
-    <title>> |> ʌ</title>
+    <title>>_|></title>
 </head>
 
 <body>
@@ -107,7 +110,7 @@
     </div>
     <div class="my-header">
         <div class="my-logo">
-            <h1>>_|>_ʌ</h1>
+            <h1>>_|></h1>
         </div>
     </div>
     <!-- <div class="navbar">
