--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         * {
             box-sizing: border-box;
         }
+
         html {
             height: 100%;
             overflow-x: hidden;
@@ -91,22 +92,28 @@
         }
 
         .my-menu-icon {
-            background: aquamarine;
+            background: none;
             position: fixed;
             top: 50vh;
             left: 0;
             z-index: 100;
-            height: 25px;
+            height: auto;
             width: 4vw;
             color: black;
         }
     </style>
     <title>>_|></title>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 
 <body>
     <div class="my-menu-icon">
-        MENU
+        <div id="nav-icon3">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
     <div class="my-header">
         <div class="my-logo">
@@ -129,3 +136,92 @@
 </body>
 
 </html>
+
+<script>
+    $(document).ready(function () {
+        $('#nav-icon1,#nav-icon2,#nav-icon3,#nav-icon4').click(function () {
+            $(this).toggleClass('open');
+        });
+    });
+</script>
+
+<style>
+
+    #nav-icon3  {
+        width: 60px;
+        height: 45px;
+        position: relative;
+        margin: 5px auto;
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transition: .5s ease-in-out;
+        -moz-transition: .5s ease-in-out;
+        -o-transition: .5s ease-in-out;
+        transition: .5s ease-in-out;
+        cursor: pointer;
+    }
+
+    #nav-icon3 span {
+        display: block;
+        position: absolute;
+        height: 9px;
+        width: 100%;
+        background: aquamarine;
+        border-radius: 9px;
+        opacity: 1;
+        left: 0;
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transition: .25s ease-in-out;
+        -moz-transition: .25s ease-in-out;
+        -o-transition: .25s ease-in-out;
+        transition: .25s ease-in-out;
+    }
+
+    /* Icon 3 */
+
+    #nav-icon3 span:nth-child(1) {
+        top: 0px;
+    }
+
+    #nav-icon3 span:nth-child(2),
+    #nav-icon3 span:nth-child(3) {
+        top: 18px;
+    }
+
+    #nav-icon3 span:nth-child(4) {
+        top: 36px;
+    }
+
+    #nav-icon3.open span:nth-child(1) {
+        top: 18px;
+        width: 0%;
+        left: 50%;
+    }
+
+    #nav-icon3.open span:nth-child(2) {
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+    }
+
+    #nav-icon3.open span:nth-child(3) {
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+    }
+
+    #nav-icon3.open span:nth-child(4) {
+        top: 18px;
+        width: 0%;
+        left: 50%;
+    }
+
+   
+</style>
