--- a/index.html
+++ b/index.html
@@ -2,199 +2,33 @@
 <html>
 
 <head>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        html {
-            height: 100%;
-            overflow-x: hidden;
-            font-family: "Courier New", Courier, monospace;
-        }
-
-        body {
-            background: black;
-            color: white;
-            /* margin: 0; */
-            top: 0;
-            min-height: 100%;
-            position: relative;
-            width: 100%;
-            margin: 0;
-        }
-
-        .my-header {
-            background: black;
-            color: aquamarine;
-            top: 0;
-            position: relative;
-            width: 100%;
-            height: 30vh;
-            /* padding: 10px; */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            /* border-top: 25px solid aquamarine;
-            border-bottom: 25px solid aquamarine; */
-        }
-
-        .my-logo {
-            /* display: flex; */
-            /* margin: auto; */
-            /* padding: 25vh; */
-            font-size: 5vh;
-            /* align-items: center;
-            justify-content: center; */
-        }
-
-        .navbar {
-            position: relative;
-            bottom: 0;
-            height: 60px;
-            background: aquamarine;
-            padding: 4px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .my-main {
-            /* background: gray; */
-            height: 1000px;
-            width: 100%;
-            position: relative;
-
-        }
-
-        .my-footer {
-            background: aquamarine;
-            bottom: 0;
-            position: relative;
-            width: 100%;
-            height: auto;
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
-
-        .github-logo {
-            left: 50%;
-            position: relative;
-        }
-
-        .my-button {
-            width: 33%;
-            height: 100%;
-            background: none;
-            border: 1px solid black;
-            margin-right: 1vw;
-            margin-left: 1vw;
-        }
-
-        .my-menu-icon {
-            background: none;
-            /* position: fixed; */
-            /* top: 50vh; */
-            padding: 10px;
-            left: 0;
-            z-index: 100;
-            height: auto;
-            width: 4vw;
-            color: black;
-        }
-
-        #nav-icon3 {
-            width: 60px;
-            height: 45px;
-            position: relative;
-            margin: 5px auto;
-            -webkit-transform: rotate(0deg);
-            -moz-transform: rotate(0deg);
-            -o-transform: rotate(0deg);
-            transform: rotate(0deg);
-            -webkit-transition: .5s ease-in-out;
-            -moz-transition: .5s ease-in-out;
-            -o-transition: .5s ease-in-out;
-            transition: .5s ease-in-out;
-            cursor: pointer;
-        }
-
-        #nav-icon3 span {
-            display: block;
-            position: absolute;
-            height: 9px;
-            width: 100%;
-            background: aquamarine;
-            border-radius: 9px;
-            opacity: 1;
-            left: 0;
-            -webkit-transform: rotate(0deg);
-            -moz-transform: rotate(0deg);
-            -o-transform: rotate(0deg);
-            transform: rotate(0deg);
-            -webkit-transition: .25s ease-in-out;
-            -moz-transition: .25s ease-in-out;
-            -o-transition: .25s ease-in-out;
-            transition: .25s ease-in-out;
-        }
-
-        /* Icon 3 */
-
-        #nav-icon3 span:nth-child(1) {
-            top: 0px;
-        }
-
-        #nav-icon3 span:nth-child(2),
-        #nav-icon3 span:nth-child(3) {
-            top: 18px;
-        }
-
-        #nav-icon3 span:nth-child(4) {
-            top: 36px;
-        }
-
-        #nav-icon3.open span:nth-child(1) {
-            top: 18px;
-            width: 0%;
-            left: 50%;
-        }
-
-        #nav-icon3.open span:nth-child(2) {
-            -webkit-transform: rotate(45deg);
-            -moz-transform: rotate(45deg);
-            -o-transform: rotate(45deg);
-            transform: rotate(45deg);
-        }
-
-        #nav-icon3.open span:nth-child(3) {
-            -webkit-transform: rotate(-45deg);
-            -moz-transform: rotate(-45deg);
-            -o-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-        }
-
-        #nav-icon3.open span:nth-child(4) {
-            top: 18px;
-            width: 0%;
-            left: 50%;
-        }
-    </style>
     <title>>_|></title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <link rel="stylesheet" href="main.css">
 
 </head>
 
 <body>
-    <div class="my-menu-icon">
-        <div id="nav-icon3">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </div>
     <div class="my-header">
+        <div class="my-menu-icon">
+            <div id="nav-icon3">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <a class="github-logo" href="http://github.com/dasbjornsson">
+            <svg height="50" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="50"
+                aria-hidden="true">
+                <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
+            </svg>
+        </a>
+
+
+    </div>
+    <div class="my-main">
         <div class="my-logo">
             <a class="button is-primary">Bulma</a>
             <a class="button is-link">Bootstrap</a>
@@ -203,19 +37,8 @@
             <a class="button is-warning">UlKit</a>
         </div>
     </div>
-    <!-- <div class="navbar">
-    </div> -->
-    <div class="my-main">
-
-    </div>
     <div class="my-footer">
-        <!-- This is the footer -->
-        <a class="github-logo" href="http://github.com/dasbjornsson">
-            <svg height="32" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="32"
-                aria-hidden="true">
-                <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
-            </svg>
-        </a>
+
     </div>
 </body>
 
