Linking domain name to repo

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
     </div>
     <div class="my-main">
         <div class="my-logo">
-            <a class="button is-primary">Bulma</a>
+            <a class="button is-primary" href="bulma.html">Bulma</a>
             <a class="button is-link">Bootstrap</a>
             <a class="button is-info">Semantic</a>
             <a class="button is-success">Foundation</a>
             <a class="button is-warning">UlKit</a>
         </div>
     </div>
+
     <div class="my-footer">
 
     </div>
