--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link rel="stylesheet" href="main.css">
+    <script src="https://cdn.counter.dev/script.js" data-id="e3b6963c-ce17-45e8-be2b-02a06c51d490" data-utcoffset="0"></script>
 
 </head>
 
